[gd_scene load_steps=13 format=3 uid="uid://etkoijovuji5"]

[ext_resource type="Script" path="res://Scenes/game_over_ui.gd" id="1_3lsns"]
[ext_resource type="Texture2D" uid="uid://yyif71evqnhb" path="res://Assets/Tiny Swords/Tiny Swords (Update 010)/UI/Banners/Banner_Horizontal.png" id="1_61a8a"]
[ext_resource type="Texture2D" uid="uid://b4mmk76kjqfjj" path="res://Assets/Tiny Swords/Tiny Swords (Update 010)/UI/Ribbons/Ribbon_Red_3Slides.png" id="2_8a6la"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pyh5f"]
texture = ExtResource("1_61a8a")
texture_margin_left = 46.5342
texture_margin_top = 28.4711
texture_margin_right = 39.0079
texture_margin_bottom = 48.8702
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(33.7027, 49.6763, 124.937, 120.045)

[sub_resource type="SystemFont" id="SystemFont_gqwfj"]
font_names = PackedStringArray("Agency FB")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_slo8a"]
font = SubResource("SystemFont_gqwfj")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_55lp5"]
texture = ExtResource("2_8a6la")
texture_margin_left = 43.2969
texture_margin_top = 2.63963
texture_margin_right = 43.9979
texture_margin_bottom = 0.536662
region_rect = Rect2(3.11894, 0.105415, 184.71, 62.3879)

[sub_resource type="SystemFont" id="SystemFont_hd3jg"]
font_names = PackedStringArray("Malgun Gothic")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_5afub"]
font = SubResource("SystemFont_hd3jg")
font_size = 64
font_color = Color(0.419608, 0.0196078, 0.0196078, 1)

[sub_resource type="Animation" id="Animation_bf0pk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverUI/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverUI/Bottom_Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(297, 393)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverUI/Panel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(285, 38)]
}

[sub_resource type="Animation" id="Animation_2x5o8"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverUI/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.847059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverUI/Bottom_Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(297, 473), Vector2(297, 393)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverUI/Panel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(285, 8), Vector2(285, 38)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ko1g"]
_data = {
"RESET": SubResource("Animation_bf0pk"),
"default": SubResource("Animation_2x5o8")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_3lsns")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.847059)

[node name="Bottom_Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.258
anchor_top = 0.62
anchor_right = 0.742
anchor_bottom = 1.031
offset_left = -0.216003
offset_top = 0.23999
offset_right = 0.216003
offset_bottom = -41.0886
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_pyh5f")

[node name="CenterContainer" type="CenterContainer" parent="Bottom_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -61.5
offset_right = 120.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Bottom_Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 30
columns = 2

[node name="Label" type="Label" parent="Bottom_Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived:
"
label_settings = SubResource("LabelSettings_slo8a")

[node name="Time_Label" type="Label" parent="Bottom_Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "00:00
"
label_settings = SubResource("LabelSettings_slo8a")

[node name="Label2" type="Label" parent="Bottom_Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monster Defeated:
"
label_settings = SubResource("LabelSettings_slo8a")

[node name="Amount_Monster" type="Label" parent="Bottom_Panel/CenterContainer/GridContainer"]
layout_mode = 2
text = "000
"
label_settings = SubResource("LabelSettings_slo8a")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.5
offset_right = 289.5
offset_bottom = 145.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_55lp5")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.216
anchor_top = 0.066
anchor_right = 0.784
anchor_bottom = 0.765
offset_left = -0.064003
offset_top = -0.0699997
offset_right = 0.0639648
offset_bottom = -15.425
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_5afub")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_0ko1g")
}
autoplay = "default"
